spec/fail/bad-library-names.scm
(define-library "hello")
(define-library .)
(define-library (scheme |silly'chars|))
(define-library (some 't))
(define-library (srfi trust me))